# DirectMethod_demo

./: .gitignore
RScamera/: CMakeLists.txt  DirectPoseEstimation.cpp  DirectPoseEstimation.h  GetRScamera.cpp  JacobianAccumulator.cpp  JacobianAccumulator.h
RScamera_book1/: CMakeLists.txt  GetRScamera.cpp  poseEstimation.cpp
RScamera_book2/: CMakeLists.txt  DirectPoseEstimation.cpp  GetRScamera.cpp  JacobianAccumulator.cpp  JacobianAccumulator.h
ch8_slambook1/directMethod/: direct_semidense.cpp  direct_sparse.cpp
ch8_slambook2/: direct_method.cpp  optical_flow.cpp
separate_book1/: poseEstimation.cpp
separate_book1_wrt_First/: main.cpp  poseEstimation.cpp  poseEstimation.h
separate_book1_wrt_First/visualization/: MapDrawer.cc  Viewer.cc
separate_book1_wrt_First_IR_dots/: CMakeLists.txt  main.cpp
separate_book1_wrt_Last/: CMakeLists.txt  CameraTrajectory.txt  Converter.cc  Converter.h  evaluate_rpe.py  main.cpp  poseEstimation.h  res_ETH3d_einstein_global_light_changes_1.txt  res_ETH3d_einstein_global_light_changes_2.txt  res_ETH3d_einstein_global_light_changes_3.txt  res_fr1-xyz.txt  res_pfr1-xyz1.txt  res_plant-dark.txt
separate_book1_wrt_Last_IR_dots/: Converter.h  main.cpp  poseEstimation.cpp  poseEstimation.h  res.txt  visualizeTraj.h
separate_book1_wrt_Last_IR_dots/visualization/: Viewer.h
separate_book1_wrt_Last_IR_dots_patch/: main.cpp  poseEstimation.cpp  poseEstimation.h  res.txt  visualizeTraj.cpp
separate_book2/: CMakeLists.txt  DirectPoseEstimation.cpp  JacobianAccumulator.cpp  JacobianAccumulator.h  direct_method.cpp
